# maestro

./: .gitignore  AGENTS.md  Cargo.toml
.opencode/command/: create-plan.md  execute-plan.md
documentation/: maestro-spec.md
src/: main.rs
src/git/: mod.rs  repository.rs  worktree.rs
src/settings/: config.rs  mod.rs  persistence.rs
src/terminal/: decorative.rs  event_loop.rs  events.rs  handle.rs  mod.rs  pty.rs  render.rs  session.rs
src/ui/: creation_dialog.rs  main_window.rs  mod.rs  sidebar.rs  terminal_view.rs  theme.rs  workspace_selector.rs
src/workspace/: manager.rs  mod.rs
