[package]
name = "maestro"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { version = "0.2.2", features = ["runtime_shaders"] }
gpui-component = "0.5.0"
gpui-component-assets = "0.5.0"
git2 = "0.20.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "5.0"
alacritty_terminal = "0.25"
mio = { version = "1.0", features = ["os-poll", "os-ext"] }
nix = { version = "0.29", features = ["term", "process", "ioctl", "signal", "fs"] }
crossbeam-channel = "0.5"
vte = "0.15"

# Force core-text 21.0.0 which uses core-graphics 0.24 (matches zed-font-kit)
# This resolves a version conflict between core-graphics 0.24 and 0.25
core-text = "=21.0.0"
rfd = "0.17.2"

[dev-dependencies]
gpui = { version = "0.2.2", features = ["test-support", "runtime_shaders"] }
